--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </h2> -->
             <img
               class="testimonials-image"
-              src="pictures/8.jpg"
+              src="8.jpg"
               alt="profile"
             />
             <!-- <em>Pebbles, New York</em> -->
@@ -97,7 +97,7 @@
             </h2> -->
             <img
               class="testimonials-image"
-              src="pictures/9.jpg"
+              src="9.jpg"
               alt="kkprofile"
             />
             <!-- <em>Beverly, Illinois</em> -->
